# assistant-skills-lib

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CROSS_LIBRARY_REFACTORING_PLAN.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/assistant_skills_lib/: __init__.py  config_manager.py
src/assistant_skills_lib/mock/: base.py
tests/: __init__.py  conftest.py  test_api_stability.py  test_batch_processor.py  test_cache.py  test_config_manager.py  test_credential_manager.py  test_error_handler.py  test_formatters.py  test_imports.py  test_project_detector.py  test_template_engine.py  test_validators.py
