[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assistant-skills-lib"
version = "1.0.1"
description = "Shared Python utilities for building Claude Code Assistant Skills plugins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "grandcamel" }
]
keywords = [
    "claude",
    "claude-code",
    "assistant-skills",
    "plugins",
    "utilities",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tabulate>=0.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
http = []
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "assistant-skills-lib[http,dev]",
]

[project.urls]
Homepage = "https://github.com/grandcamel/assistant-skills-lib"
Repository = "https://github.com/grandcamel/assistant-skills-lib"
Issues = "https://github.com/grandcamel/assistant-skills-lib/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/assistant_skills_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external calls)",
    "integration: Integration tests (may require credentials)",
    "slow: Slow-running tests",
    "live: Tests requiring live API credentials",
    "destructive: Tests that modify or delete data",
    "cache: Cache tests",
    "config: Configuration tests",
    "credentials: Credential manager tests",
    "formatters: Output formatter tests",
    "validators: Input validator tests",
    "errors: Error handler tests",
    "templates: Template engine tests",
    "batch: Batch processor tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/assistant_skills_lib"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert warnings (used in tests)
